SIP-5166: Fix for pivot designer page not showing complete data

--- a/saw-web/src/app/common/components/pivot-grid/pivot-grid.component.scss
+++ b/saw-web/src/app/common/components/pivot-grid/pivot-grid.component.scss
@@ -4,6 +4,7 @@
   height: 100%;
   width: 100%;
   display: block;
+  overflow: auto;
 }
 
 .dx-pivotgrid.dx-row-lines .dx-pivotgrid-area tbody > tr:not(:last-child):not(.dx-expand-border) + tr:not(.dx-expand-border) > td:not(.dx-total):not(.dx-grandtotal) {
@@ -11,9 +12,6 @@
 }
 
 .dx-pivotgrid {
-  width: 100%;
-  position: relative;
-
   thead.dx-pivotgrid-horizontal-headers > tr > td > span {
     font-size: 14px;
     font-weight: 600;
