--- a/saw-web/src/app/modules/analyze/designer/container/designer-container.component.scss
+++ b/saw-web/src/app/modules/analyze/designer/container/designer-container.component.scss
@@ -20,5 +20,4 @@ $designer-header-height: 57px;
 
 .designer__main {
   grid-area: content;
-  overflow-x: hidden;
 }
