--- a/saw-web/src/app/modules/analyze/designer/pivot/designer-pivot.component.scss
+++ b/saw-web/src/app/modules/analyze/designer/pivot/designer-pivot.component.scss
@@ -2,7 +2,7 @@
 
 :host {
   height: calc(100% - 20px);
-  width: calc(100% - 170px);
+  width: calc(100% - 20px);
 }
 
 .non-ideal-state__container {
